--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,14 @@
 Package: lexicon
-Title: What the Package Does (one line)
+Title: Lexicons
 Version: 0.0.1
-Authors@R: c(person("Tyler", "Rinker", email = "tyler.rinker@gmail.com", role = c("aut", "cre")))
+Authors@R: c(person("Tyler", "Rinker", email =
+        "tyler.rinker@gmail.com", role = c("aut", "cre")))
 Maintainer: Tyler Rinker <tyler.rinker@gmail.com>
-Description: What the package does (one paragraph)
-Depends: R (>= 3.2.4)
-Suggests: testthat
-Date: 2016-03-14
+Description: A collection of lexical hash tables, dictionaries, and word lists.
+Depends:
+    R (>= 3.2.2)
+Date: 2016-03-15
 License: GPL-2
 LazyData: TRUE
 Roxygen: list(wrap = FALSE)
+RoxygenNote: 5.0.1
