--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,12 @@
 Package: lexicon
 Title: Lexicons for Text Analysis
 Version: 0.6.0
-Authors@R: c(person("Tyler", "Rinker", email = "tyler.rinker@gmail.com", role = c("aut",
-          "cre")))
+Authors@R: c(person("Tyler", "Rinker", email = "tyler.rinker@gmail.com", role = c("aut", "cre")))
 Maintainer: Tyler Rinker <tyler.rinker@gmail.com>
 Description: A collection of lexical hash tables, dictionaries, and word lists.
 Depends: R (>= 3.2.2)
 Imports: data.table, syuzhet (>= 1.0.1)
-Date: 2017-12-01
+Date: 2017-12-02
 License: MIT + file LICENSE
 LazyData: TRUE
 Roxygen: list(wrap = FALSE)
@@ -34,6 +33,7 @@ Collate:
     'hash_sentiment_nrc.R'
     'hash_sentiment_senticnet.R'
     'hash_sentiment_sentiword.R'
+    'hash_sentiment_vadar.R'
     'hash_strength.R'
     'hash_syllable.R'
     'hash_valence_shifters.R'
