* `hash_sentiment_socal_google` sentiment hash table added for use in the   **sentimentr** package.

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -21,3 +21,4 @@ inst/scraping_scripts
 tools/lexicon_logo/r_lexicona.png
 tools/lexicon_logo/r_lexicon.pptx
 tools/lexicon_logo/resize_icon.txt
+jockers_rinker2.R
